2012-02-27  Andy Buckley  <andy.buckley@cern.ch>

	* doc/mk-analysis-html: Adding more LaTeX/text -> HTML conversion
	replacements, including better <,> handling.

2012-02-26  Andy Buckley  <andy.buckley@cern.ch>

	* Adding CMS_2011_S8973270, CMS_2011_S8941262, CMS_2011_S9215166,
	CMS_QCD_10_024, from CMS.

	* Adding LHCB_2011_I917009 analysis, from Alex Grecu.

	* src/Core/Analysis.cc, include/Rivet/Analysis.hh: Add a numeric-arg version of histoPath().

2012-02-24  Holger Schulz  <holger.schulz@physik.hu-berlin.de>

	* Adding ATLAS Ks/Lambda analysis.

2012-02-20  Andy Buckley  <andy.buckley@cern.ch>

	* src/Analyses/ATLAS_2011_I925932.cc: Using new overflow-aware
	normalize() in place of counters and scale(..., 1/count)

2012-02-14  Andy Buckley  <andy.buckley@cern.ch>

	* Splitting MC_GENERIC to put the PDF and PID plotting into
	MC_PDFS and MC_IDENTIFIED respectively.

	* Renaming MC_LEADINGJETS to MC_LEADJETUE.

2012-02-14  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* DELPHI_1996_S3430090 and ALEPH_1996_S3486095:
	fix rapidity vs {Thrust,Sphericity}-axis.

2012-02-14  Andy Buckley  <andy.buckley@cern.ch>

	* bin/compare-histos: Don't attempt to remove bins from MC histos
	where they aren't found in the ref file, if the ref file is not
	expt data, or if the new --no-rmgapbins arg is given.

	* bin/rivet: Remove the conversion of requested analysis names to
	upper-case: mixed-case analysis names will now work.

2012-02-14  Frank Siegert  <frank.siegert@cern.ch>

	* Bugfixes and improvements for MC_TTBAR:
	  - Avoid assert failure with logspace starting at 0.0
	  - Ignore charged lepton in jet finding (otherwise jet multi is always
	    +1).
	  - Add some dR/deta/dphi distributions as noted in TODO
	  - Change pT plots to logspace as well (to avoid low-stat high pT bins)

2012-02-10  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* rivet-mkhtml -c option now has the semantics of a .plot
	file. The contents are appended to the dat output by
	compare-histos.
